xoa post bang user

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://truongtunglam69:Gh2bgcodlewExlrB@cluster0.ca9feos.mongodb.net/chat-db?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://truongtunglam69:u86tSVTp396qey9y@cluster0.lg1zkee.mongodb.net/social?retryWrites=true&w=majority&appName=Cluster0
 PORT=5001
 JWT_SECRET=mysecretkey
 # Lưu trữ ảnh bằng cloudinary
